2005-10-29  H.J. Lu  <hongjiu.lu@intel.com>

	* hpux-core.c: Include <machine/reg.h> only if HPUX_CORE is
	define.
	* osf-core.c: Include <sys/core.h> only if OSF_CORE is defined.
	* sco5-core.c: Include <sys/paccess.h> and <sys/region.h> only
	if SCO5_CORE is defined.

2005-10-29  Mark Kettenis  <kettenis@gnu.org>

	* Makefile.am: Run "make dep-am".
	* Makefile.in: Regenerate.

2005-10-28  Joel Brobecker  <brobecker@adacore.com>

	From Eric Botcazou  <botcazou@adacore.com>
	* coffcode.h (coff_compute_section_file_positions): Fix small
	error in preprocessor directives.

2005-10-28  Joel Brobecker  <brobecker@adacore.com>

	Mostly from Eric Botcazou <botcazou@adacore.com>
	* rs6000-core.c: ANSIfy all function definitions.
	Add missing function prototypes.
	(ptr_to_uint): New type.
	(rs6000coff_core_p): Use it as intermediate step in casts.
	(rs6000coff_core_file_matches_executable_p): Likewise.
	* xcoff-target.h (rs6000coff_core_p): Fix prototype.
	(rs6000coff_core_file_matches_executable_p): Likewise.

2005-10-28  H.J. Lu  <hongjiu.lu@intel.com>

	PR binutils/1472
	* aoutx.h (NAME (aout, machine_type)): Handle
	bfd_mach_sparc_v8plus, bfd_mach_sparc_v8plusa,
	bfd_mach_sparc_v8plusb, bfd_mach_sparc_v9, bfd_mach_sparc_v9a
	and bfd_mach_sparc_v9b.

2005-10-28  Hans-Peter Nilsson  <hp@axis.com>

	PR ld/1567
	* elf32-cris.c (cris_elf_howto_table) <R_CRIS_32>: Set
	complain_on_overflow field to complain_overflow_dont.

2005-10-27  Alan Modra  <amodra@bigpond.net.au>

	PR 973
	* cache.c (enum cache_flag): New.
	(close_one): Save file mtime.
	(bfd_cache_lookup): Add flag arg, adjust all users.
	(bfd_cache_lookup_worker): Likewise.
	(cache_btell): Use CACHE_NO_OPEN and return abfd->where if file
	not open.
	(cache_bflush): Similarly, and return success of file not open.
	(cache_bseek): Use CACHE_NO_SEEK if SEEK_SET or SEEK_END.
	(cache_bstat): Use CACHE_NO_SEEK_ERROR.

	* bfdwin.c (bfd_get_file_window): Seek into file in place of
	using bfd_cache_lookup.
